thêm recaptcha cho chức năng đăng nhập

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,17 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Google reCAPTCHA Configuration
+# Lấy từ: https://www.google.com/recaptcha/admin/create
+
+# Bật/tắt reCAPTCHA (true/false)
+RECAPTCHA_ENABLED=true
+# Site Key (public key) - hiển thị trên client
+RECAPTCHA_SITE_KEY=your_site_key_here
+# Secret Key (private key) - sử dụng trên server
+RECAPTCHA_SECRET_KEY=your_secret_key_here
+# Phiên bản reCAPTCHA (v2 hoặc v3)
+RECAPTCHA_VERSION=v2
+# Điểm số tối thiểu, chỉ áp dụng cho reCAPTCHA v3 (0.0 - 1.0)
+RECAPTCHA_MIN_SCORE=0.5
