--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,11 @@ PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
-LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_CHANNEL=daily
+LOG_STACK=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+LOG_DAILY_DAYS=180
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
