--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "filament/filament": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "reliese/laravel": "^1.4"
+        "reliese/laravel": "^1.4",
+        "spatie/laravel-sitemap": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
