--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "reliese/laravel": "^1.4",
+        "spatie/laravel-analytics": "^5.6",
         "spatie/laravel-sitemap": "^7.3"
     },
     "require-dev": {
